Pygments sucks and doesn't wrap stuff in code so I haz fixed it

--- a/public/stylesheets/monsoon.css
+++ b/public/stylesheets/monsoon.css
@@ -310,7 +310,7 @@
   margin: 0;
 }
 
-.monsoon .highlight pre {
+.monsoon .highlight {
   background: #fff;
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
@@ -320,6 +320,11 @@
   -webkit-box-shadow: 0 1px 0 #fff, 0 1px 3px rgba(0, 0, 0, .1) inset;
   box-shadow: 0 1px 0 #fff, 0 1px 3px rgba(0, 0, 0, .1) inset;
   color: #000;
+  font: 12px Monaco, monospace;
   padding: 12px;
+}
+
+.wf-active .monsoon .highlight {
+  font: 15px "inconsolata-1", "inconsolata-2";
 }
 /* ------------------------------------------- */
